test/error/CMakeFiles/error_extern_func_self_argument.dir/depend.make
# Empty dependencies file for error_extern_func_self_argument.
# This may be replaced when dependencies are built.
